Require user-selected application organization consent
